[gd_scene load_steps=21 format=3 uid="uid://cdaokf1khlpu0"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_aetbe"]
[ext_resource type="PackedScene" uid="uid://bj48rsidmna6s" path="res://addons/CustomControls/custom_spin_box.tscn" id="1_enr6p"]
[ext_resource type="Script" uid="uid://fwr2lqx2rlky" path="res://addons/CustomControls/Dialogs/CommandEvents/wait_dialog.gd" id="1_mw23j"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="2_mjnkr"]
[ext_resource type="Texture2D" uid="uid://xl88b63otgpi" path="res://addons/CustomControls/Images/button1_background.png" id="3_4qmhe"]
[ext_resource type="Texture2D" uid="uid://dqnnp323vr1vo" path="res://addons/CustomControls/Images/button1_background_hover.png" id="4_h4fje"]
[ext_resource type="PackedScene" uid="uid://dytkm5727u3up" path="res://addons/CustomControls/rich_check_box.tscn" id="4_ipuqb"]
[ext_resource type="Texture2D" uid="uid://beg6i1p118qd" path="res://addons/CustomControls/Images/button1_background_selected.png" id="5_sdy2f"]
[ext_resource type="Texture2D" uid="uid://bkfn4ru5noaaa" path="res://addons/CustomControls/Images/button1_background_disabled.png" id="6_vigq6"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_u11f1"]

[sub_resource type="Gradient" id="Gradient_u5yrp"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6yyp3"]
gradient = SubResource("Gradient_u5yrp")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_subod"]
texture = ExtResource("3_4qmhe")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mjylh"]
texture = ExtResource("5_sdy2f")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7qdgr"]
texture = ExtResource("4_h4fje")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qiqap"]
texture = ExtResource("6_vigq6")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_maa40"]
texture = ExtResource("3_4qmhe")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5stfh"]
texture = ExtResource("5_sdy2f")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4sujn"]
texture = ExtResource("4_h4fje")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hfo07"]
texture = ExtResource("6_vigq6")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[node name="WaitDialog" type="Window"]
oversampling_override = 1.0
title = "Wait"
position = Vector2i(0, 36)
size = Vector2i(646, 145)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
theme = ExtResource("1_aetbe")
script = ExtResource("1_mw23j")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_u11f1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_6yyp3")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ParameterName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Duarion:"

[node name="Duration" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_enr6p")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Temporarily stops an event. While stopped, the player cannot perform any actions (excluding processes running in parallel)."
min_value = 0.01
step = 0.01
value = 1.0
rounded = false
allow_greater = true

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "second/s"

[node name="LocalContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MakeLocalEvent" parent="MarginContainer/VBoxContainer/LocalContainer" instance=ExtResource("4_ipuqb")]
unique_name_in_owner = true
layout_mode = 2
hover_color = Color(1, 0.498039, 0.313726, 0.529412)
rich_text = "Make local when event is \"[color=red]parallel[/color]\""

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 12

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
alignment = 1

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("2_mjnkr")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
theme_override_styles/normal = SubResource("StyleBoxTexture_subod")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mjylh")
theme_override_styles/hover = SubResource("StyleBoxTexture_7qdgr")
theme_override_styles/disabled = SubResource("StyleBoxTexture_qiqap")
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("2_mjnkr")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
theme_override_styles/normal = SubResource("StyleBoxTexture_maa40")
theme_override_styles/pressed = SubResource("StyleBoxTexture_5stfh")
theme_override_styles/hover = SubResource("StyleBoxTexture_4sujn")
theme_override_styles/disabled = SubResource("StyleBoxTexture_hfo07")
text = "CANCEL"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
